Fixed a bug to make the photos behind the logo clickable

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -32,10 +32,12 @@ body {
     transform: translate(-50%, -50%);
     z-index: 1;
     width: 50%;
+    pointer-events: none;
 }
 
 .logo {
     height: fit-content; 
+    pointer-events: none;
 }
 
 .slideshow {
